test_regress/t/t_property_nfa_stop_error_limit_crossing.out
%Error: t/t_property_nfa_stop_error_limit_crossing.v:23: Verilog $stop
Aborting...
